@@ -911,6 +911,13 @@
                             <goal>test</goal>
                         </goals>
                         <configuration>
+	                          <argLine>
+										            --illegal-access=permit
+										            --add-opens=java.base/java.lang=ALL-UNNAMED
+										            --add-opens=java.base/java.util=ALL-UNNAMED
+										            --add-opens=java.base/java.nio=ALL-UNNAMED
+										            --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+										        </argLine>
                             <includes>
                                 <!-- Include unit tests within integration-test phase. -->
                                 <include>src/test/**/*Test.java</include>
@@ -928,6 +935,13 @@
                             <goal>test</goal>
                         </goals>
                         <configuration>
+                            <argLine>
+                                --illegal-access=permit
+                                --add-opens=java.base/java.lang=ALL-UNNAMED
+                                --add-opens=java.base/java.util=ALL-UNNAMED
+                                --add-opens=java.base/java.nio=ALL-UNNAMED
+                                --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+                            </argLine>
                             <includes>
                                 <!-- Include integration tests within integration-test phase. -->
                                 <include>src/test/**/*IT.java</include>
